src/pursuit/log/build_2022-12-20_12-57-14/pursuit/stderr.log
  File "/home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit/pure_pursuit.py", line 115
    if min(abs(sol1 - in_pos[0]), abs(sol1 - out_pos))
                                                      ^
SyntaxError: invalid syntax

